@@ -16,6 +16,7 @@
 
 package com.jayway.restassured.internal.http;
 
+import com.jayway.restassured.config.DecoderConfig;
 import com.jayway.restassured.internal.http.ContentEncoding.Type;
 import org.apache.http.client.HttpClient;
 import org.apache.http.impl.client.AbstractHttpClient;
@@ -25,44 +26,54 @@ import java.util.Map;
 
 /**
  * Keeps track of available content-encoding handlers.
+ *
  * @author <a href='mailto:tomstrummer+httpbuilder@gmail.com'>Tom Nichols</a>
  */
 public class ContentEncodingRegistry {
 
-	protected Map<String,ContentEncoding> availableEncoders = getDefaultEncoders();
-	
-	/**
-	 * This implementation adds a {@link GZIPEncoding} and {@link DeflateEncoding}
-	 * handler to the registry.  Override this method to provide a different set 
-	 * of defaults. 
-	 * @return a map to content-encoding strings to {@link ContentEncoding} handlers.
-	 */
-	protected Map<String,ContentEncoding> getDefaultEncoders() {
-		Map<String, ContentEncoding> map = new HashMap<String, ContentEncoding>();
-		map.put( Type.GZIP.toString(), new GZIPEncoding() );
-		map.put( Type.DEFLATE.toString(), new DeflateEncoding() );
-		return map;
-	}	
+    private final boolean useNoWrapForInflatedStreams;
+    protected Map<String, ContentEncoding> availableEncoders;
 
-	/**
-	 * Add the request and response interceptors to the {@link HttpClient}, 
-	 * which will provide transparent decoding of the given content-encoding 
-	 * types.  This method is called by HTTPBuilder and probably should not need 
-	 * be modified by sub-classes.
-	 * @param client client on which to set the request and response interceptors
-	 * @param encodings encoding name (either a {@link ContentEncoding.Type} or 
-	 *   a <code>content-encoding</code> string.
-	 */
-	void setInterceptors( final AbstractHttpClient client, Object... encodings ) {
-		// remove any encoding interceptors that are already set
-		client.removeRequestInterceptorByClass( ContentEncoding.RequestInterceptor.class );
-		client.removeResponseInterceptorByClass( ContentEncoding.ResponseInterceptor.class );
-		
-		for ( Object encName : encodings ) {
-			ContentEncoding enc = availableEncoders.get( encName.toString() );
-			if ( enc == null ) continue;
-			client.addRequestInterceptor( enc.getRequestInterceptor() );
-			client.addResponseInterceptor( enc.getResponseInterceptor() );
-		}
-	}
+    public ContentEncodingRegistry(DecoderConfig decoderConfig) {
+        useNoWrapForInflatedStreams = (decoderConfig == null ? DecoderConfig.decoderConfig() : decoderConfig).shouldUseNoWrapForInflatedStreams();
+        availableEncoders = getDefaultEncoders();
+    }
+
+
+    /**
+     * This implementation adds a {@link GZIPEncoding} and {@link DeflateEncoding}
+     * handler to the registry.  Override this method to provide a different set
+     * of defaults.
+     *
+     * @return a map to content-encoding strings to {@link ContentEncoding} handlers.
+     */
+    protected Map<String, ContentEncoding> getDefaultEncoders() {
+        Map<String, ContentEncoding> map = new HashMap<String, ContentEncoding>();
+        map.put(Type.GZIP.toString(), new GZIPEncoding());
+        map.put(Type.DEFLATE.toString(), new DeflateEncoding(useNoWrapForInflatedStreams));
+        return map;
+    }
+
+    /**
+     * Add the request and response interceptors to the {@link HttpClient},
+     * which will provide transparent decoding of the given content-encoding
+     * types.  This method is called by HTTPBuilder and probably should not need
+     * be modified by sub-classes.
+     *
+     * @param client    client on which to set the request and response interceptors
+     * @param encodings encoding name (either a {@link ContentEncoding.Type} or
+     *                  a <code>content-encoding</code> string.
+     */
+    void setInterceptors(final AbstractHttpClient client, Object... encodings) {
+        // remove any encoding interceptors that are already set
+        client.removeRequestInterceptorByClass(ContentEncoding.RequestInterceptor.class);
+        client.removeResponseInterceptorByClass(ContentEncoding.ResponseInterceptor.class);
+
+        for (Object encName : encodings) {
+            ContentEncoding enc = availableEncoders.get(encName.toString());
+            if (enc == null) continue;
+            client.addRequestInterceptor(enc.getRequestInterceptor());
+            client.addResponseInterceptor(enc.getResponseInterceptor());
+        }
+    }
 }
